Checked navigation issues for f6 in static and fluid.  Updated f6 page form to use radio buttons.  Toggle visibility of overlap input depending on nav location (overlap doesn't matter if overlap > 4)

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -16,10 +16,13 @@ body {
 }
 
 #wcms-no-nav ul {
-	padding: 0.5rem 0.75rem;
+}
+
+#wcms-no-nav ul li a.wcms-master-menu-toggle {
 	background-color: rgba(51, 51, 51, 0.85) !important;
-	border-color: #f7f7f7;
-	border-radius: .25rem;
+	padding: 0.5rem 0.75rem;
+	border: 1px solid #7f7f7f;
+	border-radius: .25rem;	
 }
 
 #wcms-no-nav .dropdown.menu>li.is-dropdown-submenu-parent>a {
@@ -739,7 +742,7 @@ div.tool-items a.tool-item i {
 }
 
 .wcms-thin {
-	font-weight: 100 !important;
+	font-weight: 200 !important;
 }
 .wcms-normal {
 	font-weight: 500 !important;
